--- a/src/scss/partials/header.scss
+++ b/src/scss/partials/header.scss
@@ -1,5 +1,5 @@
-@import '../scss/variables';
-@import '../scss/mixins/media-queries';
+@import '../variables';
+@import '../mixins/media-queries';
 
 .site-header {
 	background-color:$dark-blue;
