--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -25,6 +25,8 @@ $black: #000;
 
 $offwhite: #f4f2ef;
 
+$red: #dc484c;
+
 $blue: #257cab;
 $dark-blue: #20688f;
 $darker-blue: #123b51;
@@ -46,7 +48,7 @@ $gutter:20px;
 // Typography
 
 $sans: 'Open Sans'; 
-$link-color: $primary; 
+$link-color: $red;
 $text-color: #333;
 $font-sm: 13px;
 $font-md: 15px;
