--- a/src/scss/partials/typography.scss
+++ b/src/scss/partials/typography.scss
@@ -9,7 +9,7 @@ a {
 	text-decoration:none;
 	color:$link-color;
 	border-bottom:1px solid lighten($link-color, 20%);
-	transition:border-bottom .2s;
+	transition:border-bottom .2s linear;
 	//
 	&:hover {
 		border-bottom:0;
