--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -22,6 +22,10 @@ $sidebar-width: 300px;
 
 $white: #FFF;
 $black: #000;
+$grey: grey;
+
+$light-grey: lighten(grey, 25%);
+$lighter-grey: lighten(grey, 45%);
 
 $offwhite: #f4f2ef;
 
