--- a/src/scss/partials/typography.scss
+++ b/src/scss/partials/typography.scss
@@ -9,19 +9,22 @@ a {
 	text-decoration:none;
 	color:$link-color;
 	border-bottom:1px solid lighten($link-color, 20%);
-	transition:border-bottom .2s linear;
+	transition:all .2s linear;
 	//
 	&:hover {
-		border-bottom:0;
 		border-bottom:2px solid $link-color;
 	}
 }
 
 h1, h2, h3, h4, h5 {
-	padding-top:1rem;
-	padding-bottom:1rem;
+	margin-top:3rem;
+	margin-bottom:1rem;
 }
 
 p {
 	margin-bottom:1rem;
+}
+
+.bold {
+	font-weight:bold;
 }
