--- a/src/scss/partials/global.scss
+++ b/src/scss/partials/global.scss
@@ -22,3 +22,9 @@ img {
 	max-width: 100%;
 	height: auto; 
 }
+
+.email:before {
+    content: attr(data-emldomain) "\0040" attr(data-emluser);
+    unicode-bidi: bidi-override;
+    direction: rtl;
+}
