--- a/src/scss/partials/article/article-content.scss
+++ b/src/scss/partials/article/article-content.scss
@@ -9,6 +9,16 @@
     margin-top:$gutter * 2
   }
   //
+  a {
+    text-decoration:none;
+    color:$link-color;
+    border-bottom:1px solid lighten($link-color, 20%);
+    //
+    &:hover {
+      border-bottom:2px solid $link-color;
+    }
+  }
+  //
   h3 {
     text-transform: uppercase;
     color: $white;
