--- a/src/scss/partials/article/article-content.scss
+++ b/src/scss/partials/article/article-content.scss
@@ -1,5 +1,5 @@
 .article__content {
-  font-size:1rem;
+  font-size:1.3rem;
   font-family:georgia,"times new roman",times,serif;
   //
   @include mq(lg) {
@@ -39,6 +39,7 @@
   //
   p {
     margin-bottom:1rem;
+    line-height:2rem;
   }
   //
   table {
