--- a/src/scss/partials/canvas.scss
+++ b/src/scss/partials/canvas.scss
@@ -4,6 +4,9 @@
 	margin-left:0;
 	background-color:$white;
 	transition:left 1s ease;
+	-webkit-transform: translate3d(0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	-webkit-perspective: 1000;
 	//
 	@include mq(lg) {
 		background-color:$offwhite;
@@ -26,11 +29,18 @@
 }
 
 .overlay {
-	position: absolute;
-	top: 0;
+	position:fixed;
+	bottom: 0;
+	top:0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	right:0;
 	z-index: 10;
 	background-color: rgba(0,0,0,0.8); /*dim the background*/
+}
+
+.reveal .overlay {
+	position:absolute;
+	@include mq(lg) {
+		left: 0;
+	}
 }
